--- a/index.html
+++ b/index.html
@@ -3,15 +3,48 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Anime Recipes</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/ramen.png">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/frenchToast.html">French Toast</a></li>
-        <li><a href="./recipes/salisburySteak.html">Salisbury Steak</a></li>
-        <li><a href="./recipes/peanutButterCookies.html">Peanut Butter Cookies</a></li>
-    </ul>
+    <h1 class="title">&#127833; Anime Recipes &#127833;</h1>
+    <div class="container">
+        <div class="column-1">
+            <div class="item-1">
+                <img src="images/anpan-spirited-away.jpg" alt="anpan-spirited-away" width="500" height="auto"
+                    class="gallery_img">
+                <div class="text"> <a href="./recipes/anpan.html" class="recipe-link">Click here to go to the
+                        recipe!</a></div>
+                <p class="recipe-name">Anpan (as seen in Spirited Away)</p>
+            </div>
+            <div class="item-2">
+                <img src="images/gyudon-steins-gate.png" alt="gyudon-steins-gate" width="500" height="auto"
+                    class="gallery_img">
+                <div class="text"><a href="./recipes/gyu-don.html" class="recipe-link">Click here to go to the
+                        recipe!</a></div>
+                <p class="recipe-name">Gyu-Don (as seen in Steins;Gate)</p>
+            </div>
+        </div>
+        <div class="center-column"><img src="images/chef2.png" alt="chef2" width="auto" height="750px"></div>
+        <div class="column-2">
+            <div class="item-1">
+                <img src="images/tonkatsu-mirai-nikki.jpg" alt="tonkatsu-mirai-nikki" width="500" height="auto"
+                    class="gallery_img">
+                <div class="text"><a href="./recipes/tonkatsu.html" class="recipe-link">Click here to go to the
+                        recipe!</a></div>
+                <p class="recipe-name">Tonkatsu (as seen in Mirai Nikki)</p>
+            </div>
+            <div class="item-2">
+                <img src="images/mitarashi-dango-naruto.webp" alt="mitarashi-dango-naruto" width="500" height="auto"
+                    class="gallery_img">
+                <div class="text"><a href="./recipes/mitarashi-dango.html" class="recipe-link">Click here to go to the
+                        recipe!</a></div>
+                <p class="recipe-name">Mitarashi Dango (as seen in Naruto)</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
