--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale= 1.0">
     <title>Anime Recipes</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/ramen.png">
 </head>
 
 <body>
-    <h1 class="title">&#127833; Anime Recipes &#127833;</h1>
+    <div class="title">
+        <h1>&#127833; Anime Recipes &#127833;</h1>
+    </div>
     <div class="container">
         <div class="column-1">
             <div class="item-1">
