Updated responsiveness of index.html, added container boxes for recipes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <p class="recipe-name">Gyu-Don (as seen in Steins;Gate)</p>
             </div>
         </div>
-        <div class="center-column"><img src="images/chef2.png" alt="chef2" width="auto" height="750px"></div>
+        <div class="center-column">
+            <div class="center-item"><img src="images/chef2.png" alt="chef2" class="center-column-image"></div>
+        </div>
         <div class="column-2">
             <div class="item-1">
                 <img src="images/tonkatsu-mirai-nikki.jpg" alt="tonkatsu-mirai-nikki" width="500" height="auto"
