--- a/recipes/tonkatsu.html
+++ b/recipes/tonkatsu.html
@@ -8,34 +8,46 @@
 </head>
 
 <body>
-    <a href="../index.html"><button class="back-button">back to main page</button></a>
-    <h1 class="recipe-title">Tonkatsu</h1>
-    <img src="../images/tonkatsu.jpg" alt="Tonkatsu" width="500" height="auto" class="center-image"/>
-    <h2>Description</h2>
-    <p>Crispy out the outside, tender on the inside, and accompanied by refreshing raw cabbage and tangy tonkatsu sauce,
-        this simple, but comforting dish is perfect for any occasion.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 lb pork tenderloin or center cut boneless pork chops</li>
-        <li>1/4 cup flour</li>
-        <li>1 Egg, whipped (add additional egg if needed)</li>
-        <li>1 - 2 cups panko or breadcrumbs</li>
-        <li>Salt and pepper</li>
-        <li>Oil for frying</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Cut and, if necessary, pound pork into desired thickness, between a half and three quarters of an inch
-            thick.</li>
-        <li>Place flour, whipped egg, and panko into three separate bowls. Into the flour, liberally mix in salt and
-            pepper.</li>
-        <li>Dredge each piece of pork in flour, then coat in the whipped egg, and lastly cover with panko, gently
-            pressing the breadcrumbs into the wet egg to adhere.</li>
-        <li>Heat a pan with oil on medium high. Fry the breaded pork until golden brown on both sides, and the pork is
-            cooked through. Alternatively, deep fry the pork in a deep frier. Remove from the oil and place on a paper
-            towel lined plate.</li>
-    </ol>
-    <p>Serve with rice, thinly sliced shredded cabbage, miso soup, and tonkatsu sauce. Itadakimasu!</p>
+    <header><a href="../index.html"><button class="back-button">back to main page</button></a></header>
+    <div id="recipe-container">
+        <h1 class="recipe-title">Tonkatsu</h1>
+        <img src="../images/tonkatsu.jpg" alt="Tonkatsu" width="500" height="auto" class="recipe-image" />
+        <hr>
+        <h2>Description</h2>
+        <hr>
+        <p>Crispy out the outside, tender on the inside, and accompanied by refreshing raw cabbage and tangy tonkatsu
+            sauce,
+            this simple, but comforting dish is perfect for any occasion.</p>
+        <hr>
+        <h2>Ingredients</h2>
+        <hr>
+        <ul>
+            <li>1 lb pork tenderloin or center cut boneless pork chops</li>
+            <li>1/4 cup flour</li>
+            <li>1 Egg, whipped (add additional egg if needed)</li>
+            <li>1 - 2 cups panko or breadcrumbs</li>
+            <li>Salt and pepper</li>
+            <li>Oil for frying</li>
+        </ul>
+        <hr>
+        <h2>Steps</h2>
+        <hr>
+        <ol>
+            <li>Cut and, if necessary, pound pork into desired thickness, between a half and three quarters of an inch
+                thick.</li>
+            <li>Place flour, whipped egg, and panko into three separate bowls. Into the flour, liberally mix in salt and
+                pepper.</li>
+            <li>Dredge each piece of pork in flour, then coat in the whipped egg, and lastly cover with panko, gently
+                pressing the breadcrumbs into the wet egg to adhere.</li>
+            <li>Heat a pan with oil on medium high. Fry the breaded pork until golden brown on both sides, and the pork
+                is
+                cooked through. Alternatively, deep fry the pork in a deep frier. Remove from the oil and place on a
+                paper
+                towel lined plate.</li>
+        </ol>
+        <p style="text-align: center;">Serve with rice, thinly sliced shredded cabbage, miso soup, and tonkatsu sauce.
+            Itadakimasu!</p>
+    </div>
 </body>
 
 </html>
