Added fixed menu and footer, contact page, updated css on all pages, added container boxes for recipes

--- a/gyu-don.html
+++ b/gyu-don.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Gyu-Don Recipe</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header><a href="../index.html"><button class="back-button">back to main page</button></a></header>
+    <script language="javascript" type="text/javascript" src="menu.html"></script>
+    <script src="js/menu.js"></script>
     <div id="recipe-container">
         <h1 class="recipe-title">Gyu-Don</h1>
-        <img src="../images/gyudon.jpg" alt="Gyu-Don" width="500" height="auto" class="recipe-image" />
+        <img src="images/gyudon.jpg" alt="Gyu-Don" width="500" height="auto" class="recipe-image" />
         <hr>
         <h2>Description</h2>
         <hr>
@@ -19,8 +20,8 @@
             top,
             it's no wonder that there are entire restaurant chains and shops in Japan completely devoted to serving this
             one
-            dish.</p>
-            <hr>
+        dish.</p>
+        <hr>
         <h2>Ingredients</h2>
         <hr>
         <ul>
@@ -47,30 +48,31 @@
                 into
                 two small bowls. The white of the egg should be slightly runny and loose, and the yolk should still be
                 soft.
-                Set aside.</li>
+            Set aside.</li>
             <li>In a pot, bring water to a boil, and then turn off the heat. Add the sliced beef and parboil, stirring
                 to
                 loosen the meat, until just cooked and its red color has disappeared, about 1-2 minutes. Immediately
                 remove
-                beef from the pot, drain well, and set aside. Do not overcook.</li>
+            beef from the pot, drain well, and set aside. Do not overcook.</li>
             <li>Place soy sauce, sake, sugar, and mirin in a pan set on medium heat. When the mixture begins to bubble,
                 add
                 the beef and toss to coat the meat with the sauce evenly. Before the sauce evaporates, turn off the
                 heat,
-                remove the beef from the pan, and set aside.</li>
+            remove the beef from the pan, and set aside.</li>
             <li>Add water, dashi, and ginger to the remaining sauce in the pan. Bring it up to heat, and add in the
                 onions
                 once it begins to bubble. Cover with a lid, and bring to a boil. Turn down the heat to low, give the
                 onions
                 a stir, and then cook until the onions are softened, about 5 minutes. Add the beef back into the pan to
-                reheat.</li>
+            reheat.</li>
             <li>Fill a large bowl with rice. Spoon the beef and onions with sauce on top of the rice. Garnish with a
                 sprinkle of green onions, a small mound of beni shouga, and shichimi togarashi. Gently slide the egg
                 from
-                its bowl and place on top of the beef.</li>
+            its bowl and place on top of the beef.</li>
         </ol>
         <p style="text-align: center;">Serve with miso soup. Itadakimasu!</p>
     </div>
+    <script language="javascript" type="text/javascript" src="footer.html"></script>
 </body>
 
 </html>
