--- a/mitarashi-dango.html
+++ b/mitarashi-dango.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Mitarashi Dango Recipe</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header><a href="../index.html"><button class="back-button">back to main page</button></a></header>
+    <script language="javascript" type="text/javascript" src="menu.html"></script>
+    <script src="js/menu.js"></script>
     <div id="recipe-container">
         <h1 class="recipe-title">Mitarashi Dango</h1>
-        <img src="../images/mitarashi-dango.webp" alt="mitarashi-dango" width="500" height="auto"
-            class="recipe-image" />
+        <img src="images/mitarashi-dango.webp" alt="mitarashi-dango" width="500" height="auto"
+        class="recipe-image" />
         <hr>
         <h2>Description</h2>
         <hr>
         <p>Mitarashi dango is a Japanese traditional sweets made of bite-sized glutinous rice dumplings stuck on skewers
             and
-            covered with sweet soy glaze. Typically, there are three to five dumplings on a skewer.</p>
+        covered with sweet soy glaze. Typically, there are three to five dumplings on a skewer.</p>
         <hr>
         <h2>Ingredients</h2>
         <hr>
@@ -45,7 +46,7 @@
             <li>When the water is boiling, drop each dumpling into the pot with a continuous motion.</li>
             <li>Dumplings will stay on the bottom first but once they are cooked, they will float. Then cook an
                 additional
-                1-2 minute.</li>
+            1-2 minute.</li>
             <li>Transfer them into iced water after they are done cooking.</li>
             <li>Once the dumplings are cooled, drain well and transfer to a wet tray.</li>
             <li>Skewer three pieces into a bamboo skewer and do this step for the rest of the balls too.</li>
@@ -56,13 +57,14 @@
         <ol>
             <li>Combine sugar, mirin, soy sauce, water, and potato starch or cornstarch in a saucepan without turning on
                 the
-                heat.</li>
+            heat.</li>
             <li>Mix it all together, then turn on the heat and continue to whisk.</li>
             <li>After the sauce becomes thick and heavy, stop the whisking, turn off the heat and transfer it to a bowl.
             </li>
         </ol>
         <p style="text-align: center;">Pour the sweet soy glaze over your prepared balls and enjoy. Itadakimasu!</p>
     </div>
+    <script language="javascript" type="text/javascript" src="footer.html"></script>
 </body>
 
 </html>
