--- a/index.html
+++ b/index.html
@@ -6,49 +6,51 @@
     <title>Anime Recipes</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/ramen.png">
+    <script src="https://kit.fontawesome.com/77133b1b16.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <script language="javascript" type="text/javascript" src="menu.html"></script>
+    <script src="js/menu.js"></script>
     <div class="title">
-        <h1>&#127833; Anime Recipes &#127833;</h1>
+      <h1>&#127833; Anime Recipes &#127833;</h1>
+  </div>
+  <div class="container">
+    <div class="column-1">
+        <div class="item-1">
+            <img src="images/anpan-spirited-away.jpg" alt="anpan-spirited-away" width="500" height="auto"
+            class="gallery_img">
+            <div class="text"> <a href="anpan.html" class="recipe-link">Click here to go to the
+            recipe!</a></div>
+        </div>
+        <p class="recipe-name">Anpan (as seen in Spirited Away)</p>
+        <div class="item-2">
+            <img src="images/mitarashi-dango-naruto.webp" alt="mitarashi-dango-naruto" width="500" height="auto"
+            class="gallery_img">
+            <div class="text"><a href="mitarashi-dango.html" class="recipe-link">Click here to go to the
+            recipe!</a></div>
+        </div>
+        <p class="recipe-name">Mitarashi Dango (as seen in Naruto)</p>
     </div>
-    <div class="container">
-        <div class="column-1">
-            <div class="item-1">
-                <img src="images/anpan-spirited-away.jpg" alt="anpan-spirited-away" width="500" height="auto"
-                    class="gallery_img">
-                <div class="text"> <a href="./recipes/anpan.html" class="recipe-link">Click here to go to the
-                        recipe!</a></div>
-                <p class="recipe-name">Anpan (as seen in Spirited Away)</p>
-            </div>
-            <div class="item-2">
-                <img src="images/gyudon-steins-gate.png" alt="gyudon-steins-gate" width="500" height="auto"
-                    class="gallery_img">
-                <div class="text"><a href="./recipes/gyu-don.html" class="recipe-link">Click here to go to the
-                        recipe!</a></div>
-                <p class="recipe-name">Gyu-Don (as seen in Steins;Gate)</p>
-            </div>
+    <div class="column-2">
+        <div class="item-1">
+            <img src="images/gyudon-steins-gate.png" alt="gyudon-steins-gate" width="500" height="auto"
+            class="gallery_img">
+            <div class="text"><a href="gyu-don.html" class="recipe-link">Click here to go to the
+            recipe!</a></div>
         </div>
-        <div class="center-column">
-            <div class="center-item"><img src="images/chef2.png" alt="chef2" class="center-column-image"></div>
+        <p class="recipe-name">Gyu-Don (as seen in Steins;Gate)</p>
+        <div class="item-2">
+            <img src="images/tonkatsu-mirai-nikki.jpg" alt="tonkatsu-mirai-nikki" width="500" height="auto"
+            class="gallery_img">
+            <div class="text"><a href="tonkatsu.html" class="recipe-link">Click here to go to the
+            recipe!</a></div>    
         </div>
-        <div class="column-2">
-            <div class="item-1">
-                <img src="images/tonkatsu-mirai-nikki.jpg" alt="tonkatsu-mirai-nikki" width="500" height="auto"
-                    class="gallery_img">
-                <div class="text"><a href="./recipes/tonkatsu.html" class="recipe-link">Click here to go to the
-                        recipe!</a></div>
-                <p class="recipe-name">Tonkatsu (as seen in Mirai Nikki)</p>
-            </div>
-            <div class="item-2">
-                <img src="images/mitarashi-dango-naruto.webp" alt="mitarashi-dango-naruto" width="500" height="auto"
-                    class="gallery_img">
-                <div class="text"><a href="./recipes/mitarashi-dango.html" class="recipe-link">Click here to go to the
-                        recipe!</a></div>
-                <p class="recipe-name">Mitarashi Dango (as seen in Naruto)</p>
-            </div>
-        </div>
+        <p class="recipe-name">Tonkatsu (as seen in Mirai Nikki)</p>
     </div>
+</div>
+<br>
+<script language="javascript" type="text/javascript" src="footer.html"></script>
 </body>
 
 </html>
