--- a/tonkatsu.html
+++ b/tonkatsu.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Tonkatsu Recipe</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header><a href="../index.html"><button class="back-button">back to main page</button></a></header>
+    <script language="javascript" type="text/javascript" src="menu.html"></script>
+    <script src="js/menu.js"></script>
     <div id="recipe-container">
         <h1 class="recipe-title">Tonkatsu</h1>
-        <img src="../images/tonkatsu.jpg" alt="Tonkatsu" width="500" height="auto" class="recipe-image" />
+        <img src="images/tonkatsu.jpg" alt="Tonkatsu" width="500" height="auto" class="recipe-image" />
         <hr>
         <h2>Description</h2>
         <hr>
         <p>Crispy out the outside, tender on the inside, and accompanied by refreshing raw cabbage and tangy tonkatsu
             sauce,
-            this simple, but comforting dish is perfect for any occasion.</p>
+        this simple, but comforting dish is perfect for any occasion.</p>
         <hr>
         <h2>Ingredients</h2>
         <hr>
@@ -34,20 +35,21 @@
         <hr>
         <ol>
             <li>Cut and, if necessary, pound pork into desired thickness, between a half and three quarters of an inch
-                thick.</li>
+            thick.</li>
             <li>Place flour, whipped egg, and panko into three separate bowls. Into the flour, liberally mix in salt and
-                pepper.</li>
+            pepper.</li>
             <li>Dredge each piece of pork in flour, then coat in the whipped egg, and lastly cover with panko, gently
-                pressing the breadcrumbs into the wet egg to adhere.</li>
+            pressing the breadcrumbs into the wet egg to adhere.</li>
             <li>Heat a pan with oil on medium high. Fry the breaded pork until golden brown on both sides, and the pork
                 is
                 cooked through. Alternatively, deep fry the pork in a deep frier. Remove from the oil and place on a
                 paper
-                towel lined plate.</li>
+            towel lined plate.</li>
         </ol>
         <p style="text-align: center;">Serve with rice, thinly sliced shredded cabbage, miso soup, and tonkatsu sauce.
-            Itadakimasu!</p>
+        Itadakimasu!</p>
     </div>
+    <script language="javascript" type="text/javascript" src="footer.html"></script>
 </body>
 
 </html>
