Added animations to index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <script language="javascript" type="text/javascript" src="menu.html"></script>
-    <script src="js/menu.js"></script>
+    <div class="menu1">
+        <script language="javascript" type="text/javascript" src="menu.html"></script>
+        <script src="js/menu.js"></script>
+    </div>
     <div class="title">
       <h1>&#127833; Anime Recipes &#127833;</h1>
   </div>
   <div class="container">
-    <div class="column-1">
+    <div class="left-column">
         <div class="item-1">
             <img src="images/anpan-spirited-away.jpg" alt="anpan-spirited-away" width="500" height="auto"
             class="gallery_img">
@@ -32,7 +34,7 @@
         </div>
         <p class="recipe-name">Mitarashi Dango (as seen in Naruto)</p>
     </div>
-    <div class="column-2">
+    <div class="right-column">
         <div class="item-1">
             <img src="images/gyudon-steins-gate.png" alt="gyudon-steins-gate" width="500" height="auto"
             class="gallery_img">
